# Software-Forensics

./: CMakeLists.txt  Challenge 2 Output.txt  Challenge 3 Output.txt  Challenge1.cpp  Challenge2.cpp  Challenge3.cpp  JPG Messages.txt  KDB.cpp  KDB.hpp  LFSR.cpp  LFSR.hpp  MD5.cpp  MD5.hpp
